Convert voucher-codes.yml to codes directory